[gd_scene load_steps=21 format=3 uid="uid://c3vehumkcl56q"]

[ext_resource type="Script" uid="uid://bbvlys08avlyw" path="res://Scripts/Environment/tall_grass.gd" id="1_hqgj8"]
[ext_resource type="Texture2D" uid="uid://bqdqnhnb8y7ff" path="res://Sprites/Sprout Lands - Sprites - Basic pack/Objects/tallgrass.png" id="1_js4l3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hqgj8"]
size = Vector2(10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_s573b"]
atlas = ExtResource("1_js4l3")
region = Rect2(0, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4nrs"]
atlas = ExtResource("1_js4l3")
region = Rect2(20, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7dy6"]
atlas = ExtResource("1_js4l3")
region = Rect2(20, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gub21"]
atlas = ExtResource("1_js4l3")
region = Rect2(40, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5fv0j"]
atlas = ExtResource("1_js4l3")
region = Rect2(60, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wk7qg"]
atlas = ExtResource("1_js4l3")
region = Rect2(80, 0, 20, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_lnrxs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s573b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4nrs")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7dy6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gub21")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5fv0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wk7qg")
}],
"loop": true,
"name": &"waving",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_hqgj8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"waving"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_mpr2u"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["default"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.534906),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1.125)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.537232),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -1)]
}

[sub_resource type="Animation" id="Animation_tvyw8"]
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.366667, 0.533333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 2, 1, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["waving"]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.566667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"stop_waving"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.388388),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 2), Vector2(0, 2), Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimatedSprite2D:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2, 0.388388),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 0.75), Vector2(1, 0.75), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jyrc5"]
_data = {
&"RESET": SubResource("Animation_hqgj8"),
&"default": SubResource("Animation_mpr2u"),
&"waving": SubResource("Animation_tvyw8")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hqgj8"]
animation = &"default"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_s573b"]
animation = &"waving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_x4nrs"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_q7dy6"]
advance_mode = 2
advance_condition = &"is_waving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gub21"]
advance_mode = 2
advance_condition = &"is_not_waving"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_5fv0j"]
states/default/node = SubResource("AnimationNodeAnimation_hqgj8")
states/default/position = Vector2(349, 100)
states/waving/node = SubResource("AnimationNodeAnimation_s573b")
states/waving/position = Vector2(502, 100)
transitions = ["Start", "default", SubResource("AnimationNodeStateMachineTransition_x4nrs"), "default", "waving", SubResource("AnimationNodeStateMachineTransition_q7dy6"), "waving", "default", SubResource("AnimationNodeStateMachineTransition_gub21")]

[node name="TallGrass" type="Node2D" node_paths=PackedStringArray("animation_tree") groups=["TallGrass"]]
y_sort_enabled = true
texture_filter = 1
script = ExtResource("1_hqgj8")
animation_tree = NodePath("AnimationTree")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_hqgj8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_lnrxs")
animation = &"waving"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_jyrc5")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_5fv0j")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/is_not_waving = false
parameters/conditions/is_waving = false

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
